<resources>
    <string name="app_name">Sequenia</string>
    <string name="title_main">Главная</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tools_title_header_genres">Жанры</string>
    <string name="alert_description_download_image_movie">Изображение не найдено</string>
    <string name="text_empty_image_description">Начало</string>
    <string name="header_movie_list_container">Фильмы</string>
    <string name="tools_text_name_movie_item_description">Тихоокеанский рубеж 2</string>
    <string name="tools_text_year_movie">Год %1$s</string>
    <string name="tools_text_rating_movie">Рейтинг: %1$s</string>
    <string name="tools_text_description_movie">Команда пилотируемых роботов-защитников остановила вторжение гигантских инопланетных монстров. Великая битва за Тихоокеанский рубеж ознаменовала новую главу в истории человечества. Однако война только начинается…\nrПришло время нового поколения отстаивать своё право на Землю.</string>
    <string name="tools_text_item_genres">драма</string>
    <string name="content_description_poster_movie">Постер фильма</string>
    <string name="content_description_arrow_back">Возврат на главный экран</string>
    <string name="onboarding_message">Приветсвуем в лучшем кинотеатре СНГ!</string>
    <string name="lets_go">ОК, подключаюсь</string>
    <string name="lets_available">Нужно подключить Интернет!</string>
    <string name="alert_internet_connections">Данных нет! Возможно отключен интернет, проверьте! Выйдите из приложения. Подключите интернет и попробуйте с нова! </string>
    <string name="alert_message">Служебное сообщение</string>
    <string name="connect_internet">Включить Интернет</string>
    <string name="no">Нет</string>
    <string name="cancel">Отмена</string>
    <string name="available_internet">Ошибка загрузки данных. Проверьте интернет!</string>
</resources>