<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <ImageView
        android:id="@+id/image_movie"
        style="@style/image_movie_description"
        android:contentDescription="@string/content_description_poster_movie"
        android:scaleType="fitXY"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/empty_image_title_tv"
        style="@style/item_movie_card_empty_image_title_description_style"
        app:layout_constraintEnd_toEndOf="@id/image_movie"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@id/image_movie"
        app:layout_constraintTop_toTopOf="@+id/image_movie" />

    <TextView
        android:id="@+id/name_movie"
        style="@style/name_movie_description"
        app:layout_constraintStart_toEndOf="@+id/image_movie"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/tools_text_name_movie_item_description" />

    <TextView
        android:id="@+id/year_movie"
        style="@style/year_movie_description"
        app:layout_constraintStart_toEndOf="@+id/image_movie"
        app:layout_constraintTop_toBottomOf="@id/name_movie"
        tools:text="@string/tools_text_year_movie" />

    <TextView
        android:id="@+id/rating_movie"
        style="@style/rating_movie_description"
        app:layout_constraintStart_toEndOf="@+id/image_movie"
        app:layout_constraintTop_toBottomOf="@id/year_movie"
        tools:text="@string/tools_text_rating_movie" />

    <TextView
        android:id="@+id/description_movie"
        style="@style/description_movie"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_movie"
        app:layout_constraintVertical_bias="0.0"
        tools:text="@string/tools_text_description_movie" />

    <View
        style="@style/view_movie_description"
        app:layout_constraintTop_toBottomOf="@id/description_movie"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>